# Musician_Relationship

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  develop_log.md  force-graph-api-zh.md  package-lock.json  package.json  pyproject.toml
docs/: request_json_key_dictionary.xlsx
music_metadata_graph/: __init__.py  progress.py  run_log.py  text_normalization.py
music_metadata_graph/pipelines/: avatar_assets.py  build_avatar_atlas.py  build_large_graph_static.py  build_static_graph.py  collect_high_confidence_singer_songs.py  collect_missing_song_singers_to_db.py  collect_singer_fans_raw.py  collect_singer_list_raw.py  collect_singer_song_tab_raw.py  collect_singer_songs.py  collect_song_album_detail_raw.py  collect_song_lyric_credit_raw.py  collect_song_producer_raw.py  defaults.py  export_web_dataset.py  fill_song_credit_missing_mids.py  fill_song_singer_missing_mids.py  filter_imported_songs.py  filter_songs_by_album_type.py  filter_songs_by_credit_completeness.py  filter_songs_by_language.py  import_singer_list_to_db.py  import_singer_song_tab_to_db.py  import_song_album_detail_to_db.py  import_song_credits_to_db.py  prepare_static_graph_assets.py  quick_search_artist_mid.py  run_from_song_tabs.py  run_full_pipeline.py  song_csv.py  write_singer_pipeline_report.py
music_metadata_graph/tools/: __init__.py  collect_jay_chou_similar_singers.py  migrate_singer_similar_raw_cache.py  write_request_json_key_dictionary.py
music_metadata_graph/visualization/: __init__.py  build_large_graph_static.py  build_static_graph.py
musician_relationship/: collect_hot_singer_registry.py  collect_singer_songs.py  validate_album_ownership.py  write_singer_pipeline_report.py
musician_relationship/pipelines/: __init__.py  collect_hot_singer_registry.py  collect_singer_songs.py  validate_album_ownership.py
scripts/: repair_markdown_anomalies.py  repair_text_anomalies.py  write_data_directory_report.py  write_supplement_filter_validation_views.py
site/: index.html
site_assets/avatar_atlas_150/: avatar-atlas-build-fingerprint.json  avatar-atlas-manifest.js  avatar-atlas-manifest.json  avatar-atlas-report.json
site_demo/: index.html
site_demo/assets/: graph-data.js
site_large/: index.html
site_mvp/assets/: graph-data.js
tests/: test_artist_name_split.py  test_collect_jay_chou_similar_singers.py  test_collect_missing_song_singers_to_db.py  test_collect_song_album_detail_raw.py  test_collect_song_lyric_credit_raw.py  test_fill_song_credit_missing_mids.py  test_filter_imported_songs.py  test_filter_songs_by_album_type.py  test_import_singer_list_to_db.py  test_migrate_singer_similar_raw_cache.py  test_progress.py  test_quick_search_artist_mid.py  test_rejection_reason_csv.py  test_run_full_pipeline.py  test_static_graph_build.py  test_text_normalization.py
web/: app.js  index.html  styles.css
web/data/: catalog.json  linjunjie.json  xuezhiqian.json  zhoujielun.json
