[project]
name = "musician-relationship"
version = "0.1.0"
description = "QQ Music metadata collection and musician relationship graph experiments."
requires-python = ">=3.12"
dependencies = [
    "qqmusic-api-python",
    "pydantic",
    "pypinyin",
]

[project.scripts]
mr-collect-hot-singers = "music_metadata_graph.pipelines.collect_hot_singer_registry:main"
mr-collect-high-confidence-songs = "music_metadata_graph.pipelines.collect_high_confidence_singer_songs:main"
